# classify-benchmark

./: Classify.hs  Fischer.hs  Main.hs  Projection.hs  README.md  classify-benchmark.cabal  report.html
