cabal-version: >=1.10
name: classify-benchmark
version: 0.1.0.0
build-type: Simple

executable classify-benchmark
  main-is: Main.hs
  other-modules: Fischer, Classify, Projection
  build-depends: base >=4.14 && <4.15, criterion, QuickCheck
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
